--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ npm/microtip@0.2.2/microtip.min.css
                         data-micromodal-trigger="description-modal"
                         >About</a
                     >
-                    <a href="https://github.com/bokub/nopaste" rel="noopener" target="_blank" class="mx-3">Source</a>
+                    <a href="https://github.com/WhateverItWorks/NoPaste" rel="noopener" target="_blank" class="mx-3">Source</a>
                 </div>
                 <div class="col"></div>
                 <div class="col-auto my-1">
@@ -139,13 +139,9 @@ npm/microtip@0.2.2/microtip.min.css
                     👁️ The server hosting NoPaste (or any clone of it) <span class="pink">cannot read or access</span> your data<br />
                     ⏳ Your data will be accessible <span class="pink">forever</span> (as long as you have the link)<br />
                     🔀 You can access your data on <span class="pink">every NoPaste clone</span>, including
-                    <a href="https://github.com/bokub/nopaste/wiki/Deploy-your-own-version-of-NoPaste" rel="noopener" target="_blank"
-                        >your own</a
-                    ><br />
+                   <br />
                     🔍 Google <span class="pink">will not index</span> your data, even if your link is public<br />
                     <br />
-                    If you want to know more, you can find more information on
-                    <a href="https://github.com/bokub/nopaste" rel="noopener" target="_blank" class="pink">GitHub</a>
                     <div class="additional-info">
                         Note: NoPaste is an improved version of Topaz's
                         <a href="https://topaz.github.io/paste" rel="noopener" target="_blank">Paste</a>
